<resources>
    <string name="app_name">siu2</string>
    <string name="skip_now">skip now</string>
    <string name="register">register</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="todo">Todo</string>
    <string name="title_activity_location">Map</string>
    <string name="computer_science_engineering"><![CDATA[Computer Science & Engineering]]></string>
    <string name="sylhet_international_university">Sylhet International University</string>
    <string name="electronics_communication_engineering"><![CDATA[Electronics & Communication Engineering]]></string>
    <string name="law">LAW</string>
    <string name="english">English</string>
    <string name="business_administration">Business Administration</string>
    <string name="department">Department</string>
    <string name="faculty_member">Faculty Member</string>
    <string name="syllabus">Syllabus</string>
    <string name="head_assistant_professor"><![CDATA[Head & Assistant Professor]]></string>
    <string name="about_siu">About SIU</string>
    <string name="fees">Fees</string>
    <string name="notice">Notice</string>
    <string name="faculty">Faculty</string>
    <string name="location">Location</string>
    <string name="news_feed">News Feed</string>
    <string name="my_profile">My Profile</string>
    <string name="facebook_page">Facebook Page</string>
    <string name="log_out">Log out</string>
    <string name="overview">Welcome To Sylhet International University. The principal aim of the Sylhet International University (SIU) is to provide high quality education at undergraduate and postgraduate levels relevant to the needs of a dynamic society. The courses and curricula are so designed as to enable a student to enter into the world of work or pursue higher academic and professional goals with a sound academic foundation. The medium of instructions in Sylhet International University is English. The academic goal of the university is not just to make the students pass the examination and get the degree but to equip them with the means to become productive members of the community and continue the practice of lifelong learning.</string>
    <string name="mission">Sylhet International University is achieving its mission by: Providing an excellent teaching-learning environment Providing professionally accomplished faculty possessing an appropriate balance of academic qualifications Providing financial grants to the poor but meritorious students Imparting education with ethical concern and social responsibility Stimulating the search for knowledge Encouraging inquiry and conversation across the traditional academic disciplines Promoting opportunity for students to develop as creative independent thinkers and leaders</string>
    <string name="accommodation">SIU has female hostels in three separate buildings just adjacent to the campus where about 250 female students can be accommodated. Supervised by one provost and two assistant provosts, these hostels are safe, comfortable and quiet.</string>
    <string name="library">SIU has a separate large building used as central library which can accommodate more than three hundred students at a time. There is a separate chamber where about 30 teachers can study. The number of books in the library are about 12 thousand which is beings continually increased. Also, the library is enriched by hundreds of scholarly journals, magazines, and CDs.</string>
    <string name="user_overview">Overview</string>
    <string name="user_vision">Vision</string>
    <string name="user_mission">The vision of Sylhet International University is to infuse into its students a passion for learning that will help them grow in their professional lives, and thereby contributing to building a better society of the 21st century.</string>
    <string name="about_mission">Mission</string>
    <string name="about_accommodation">Accommodation</string>
    <string name="about_library">Library</string>
    <string name="first_year_first_semester">First Year First Semester</string>
    <string name="course_code">Course Code</string>
    <string name="course_title">Course Title</string>
    <string name="credits">Credits</string>
    <string name="welcome">Welcome</string>
</resources>