<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="10dp"
    android:background="@drawable/er"
    tools:context=".UserMode">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="30dp"
                android:textSize="20sp"
                android:background="@drawable/basement"
                android:gravity="center"
                android:textColor="#fff"
                android:text="@string/sylhet_international_university"
                />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/user_profile"
            android:layout_marginTop="10dp"
            android:layout_width="match_parent"
            android:layout_height="70dp"
            android:gravity="center"
            android:elevation="20dp"
            android:background="@drawable/menu_button"
            android:orientation="vertical">

            <ImageView
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:background="@drawable/myprofile"
                android:contentDescription="@string/todo" />

            <TextView
                android:gravity="center"
                android:layout_width="70dp"
                android:layout_height="wrap_content"
                android:textColor="#fff"
                android:text="@string/my_profile"/>

        </LinearLayout>

        <LinearLayout
            android:id="@+id/user_newsfeed"
            android:layout_marginTop="10dp"
            android:layout_width="match_parent"
            android:layout_height="70dp"
            android:gravity="center"
            android:elevation="20dp"
            android:background="@drawable/menu_button"
            android:orientation="vertical">

            <ImageView
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:background="@drawable/news"
                android:contentDescription="@string/todo" />

            <TextView
                android:gravity="center"
                android:layout_width="70dp"
                android:layout_height="wrap_content"
                android:textColor="#fff"
                android:text="@string/news_feed"/>

        </LinearLayout>

        <LinearLayout
            android:id="@+id/user_notice"
            android:layout_marginTop="10dp"
            android:layout_width="match_parent"
            android:layout_height="70dp"
            android:gravity="center"
            android:elevation="20dp"
            android:background="@drawable/menu_button"
            android:orientation="vertical">

            <ImageView
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:background="@drawable/notice"
                android:contentDescription="@string/todo" />

            <TextView
                android:gravity="center"
                android:layout_width="70dp"
                android:layout_height="wrap_content"
                android:textColor="#fff"
                android:text="@string/notice"/>

        </LinearLayout>

        <LinearLayout
            android:id="@+id/user_faculty"
            android:layout_marginTop="10dp"
            android:layout_width="match_parent"
            android:layout_height="70dp"
            android:gravity="center"
            android:elevation="20dp"
            android:background="@drawable/menu_button"
            android:orientation="vertical">

            <ImageView
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:background="@drawable/faculty"
                android:contentDescription="@string/todo" />

            <TextView
                android:gravity="center"
                android:layout_width="70dp"
                android:layout_height="wrap_content"
                android:textColor="#fff"
                android:text="@string/faculty"/>

        </LinearLayout>

        <LinearLayout
            android:id="@+id/user_fees"
            android:layout_marginTop="10dp"
            android:layout_width="match_parent"
            android:layout_height="70dp"
            android:gravity="center"
            android:elevation="20dp"
            android:background="@drawable/menu_button"
            android:orientation="vertical">

            <ImageView
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:background="@drawable/fees"
                android:contentDescription="@string/todo" />

            <TextView
                android:gravity="center"
                android:layout_width="70dp"
                android:layout_height="wrap_content"
                android:textColor="#fff"
                android:text="@string/fees"/>

        </LinearLayout>

        <LinearLayout
            android:id="@+id/user_location"
            android:layout_marginTop="10dp"
            android:layout_width="match_parent"
            android:layout_height="70dp"
            android:gravity="center"
            android:elevation="20dp"
            android:background="@drawable/menu_button"
            android:orientation="vertical">

            <ImageView
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:background="@drawable/location"
                android:contentDescription="@string/todo" />

            <TextView
                android:gravity="center"
                android:layout_width="70dp"
                android:layout_height="wrap_content"
                android:textColor="#fff"
                android:text="@string/location"/>

        </LinearLayout>

        <LinearLayout
            android:id="@+id/user_fb"
            android:layout_marginTop="10dp"
            android:layout_width="match_parent"
            android:layout_height="70dp"
            android:gravity="center"
            android:elevation="20dp"
            android:background="@drawable/menu_button"
            android:orientation="vertical">

            <ImageView
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:background="@drawable/fb"
                android:contentDescription="@string/todo" />

            <TextView
                android:gravity="center"
                android:layout_width="120dp"
                android:layout_height="wrap_content"
                android:textColor="#fff"
                android:text="@string/facebook_page"/>

        </LinearLayout>

        <LinearLayout
            android:id="@+id/user_about"
            android:layout_marginTop="10dp"
            android:layout_width="match_parent"
            android:layout_height="70dp"
            android:gravity="center"
            android:elevation="20dp"
            android:background="@drawable/menu_button"
            android:orientation="vertical">

            <ImageView
                android:background="@drawable/siu"
                android:padding="2dp"
                android:layout_width="35dp"
                android:layout_height="45dp"
                android:contentDescription="@string/todo" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="#fff"
                android:text="@string/about_siu"/>

        </LinearLayout>

        <LinearLayout
            android:id="@+id/user_logout"
            android:layout_marginTop="10dp"
            android:layout_width="match_parent"
            android:layout_height="70dp"
            android:gravity="center"
            android:elevation="20dp"
            android:background="@drawable/menu_button"
            android:orientation="vertical">

            <ImageView
                android:background="@drawable/logout"
                android:padding="2dp"
                android:layout_width="45dp"
                android:layout_height="45dp"
                android:contentDescription="@string/todo" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="#fff"
                android:text="@string/log_out"/>

        </LinearLayout>




    </LinearLayout>
</ScrollView>